--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: "Kuchenwiki"
-baseURL: "https://bpampel.github.io/kuchenwiki"
+baseURL: "https://bpampel.github.io"
 languageCode: "de-de"
 theme: "pulp"
 canonifyURLs: true
@@ -8,7 +8,7 @@ sectionPagesMenu: "main"
 
 params:
   Author: "Benjamin Pampel"
-  publicationYear: 2021
+  publicationYear: 2022
   description: "Eine Sammlung von Kuchenrezepten"
   avatar: "baerli.jpg"
   avatarDescription: "Kuchen-Verspeiser"
