--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
   Author: "Benjamin Pampel"
   publicationYear: 2022
   description: ""
-  avatar: "baerli.jpg"
+  avatar: "me.png"
   avatarDescription: "me"
   favicon: "favicon.ico"
 
