--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: "Benjamin Pampel"
-baseURL: "https://bpampel.github.io"
+baseURL: "https://bpampel.de"
 languageCode: "en-us"
 theme: "pulp"
 canonifyURLs: true
