Add content to main page

--- a/config.yaml
+++ b/config.yaml
@@ -9,13 +9,7 @@ sectionPagesMenu: "main"
 params:
   Author: "Benjamin Pampel"
   publicationYear: 2022
-  description: "
-I'm a physicist currently working as doctoral researcher at the [MPI-P](https://www.mpip-mainz.mpg.de/) in Mainz.
-
-My research focuses on developing new computational methods to better understand soft matter phenomena.
-
-The first part of my PhD research has now been submitted for publication and is up on [arXiv](https://arxiv.org/abs/2202.13459)!
-    "
+  description: ""
   avatar: "me.png"
   avatarDescription: "me"
   favicon: "favicon.ico"
