--- a/config.yaml
+++ b/config.yaml
@@ -28,6 +28,10 @@ menu:
     name: CV
     pre: <i class='fa fa-file-alt'></i>
     url: /cv.html
+  - identifier: github
+    name: GitHub
+    pre: <i class='fab fa-github'></i>
+    url: https://github.com/bpampel/
   - identifier: Kuchenwiki
     name: Kuchenwiki
     pre: <i class='fa fa-birthday-cake'></i>
